Fixed cards in outflows/inflows views and aligned buttons with table

--- a/app/assets/stylesheets/components/_table.scss
+++ b/app/assets/stylesheets/components/_table.scss
@@ -1,7 +1,7 @@
 .thead {
   position: sticky;
   top: 0;
-  background-color: #FFF;
+  background-color: #d7d7d7;
   width: 100%;
 }
 
